# SLMPrintTest

./: .gitignore  CMakeLists.txt  Paras.xml  README.md  main.cpp  qml.qrc
0.SLMPrintTest_Log/2025.06/: 2025.06.24_infoLog.txt  2025.06.25_infoLog.txt  2025.06.26_infoLog.txt  2025.06.27_infoLog.txt  2025.06.30_infoLog.txt
0.SLMPrintTest_Log/2025.07/: 2025.07.01_infoLog.txt  2025.07.03_infoLog.txt  2025.07.04_infoLog.txt  2025.07.07_infoLog.txt  2025.07.08_infoLog.txt  2025.07.09_infoLog.txt  2025.07.11_infoLog.txt  2025.07.12_infoLog.txt  2025.07.14_infoLog.txt  2025.07.15_infoLog.txt  2025.07.16_infoLog.txt  2025.07.17_infoLog.txt  2025.07.28_infoLog.txt  2025.07.29_infoLog.txt  2025.07.30_infoLog.txt  2025.07.31_infoLog.txt
0.SLMPrintTest_Log/2025.08/: 2025.08.01_infoLog.txt  2025.08.04_infoLog.txt  2025.08.05_infoLog.txt  2025.08.06_infoLog.txt  2025.08.07_infoLog.txt  2025.08.08_infoLog.txt  2025.08.09_infoLog.txt  2025.08.11_infoLog.txt  2025.08.12_infoLog.txt
0.galvoMirrorCorrectionTest_Log/2024.12/: 2024.12.20_infoLog.txt  2024.12.24_infoLog.txt
0.galvoMirrorCorrectionTest_Log/2025.06/: 2025.06.05_infoLog.txt  2025.06.06_infoLog.txt  2025.06.09_infoLog.txt  2025.06.12_infoLog.txt  2025.06.13_infoLog.txt  2025.06.17_infoLog.txt  2025.06.18_infoLog.txt  2025.06.19_infoLog.txt
lib/clipper2/: Clipper2_64.lib
src/hal/: CMakeLists.txt
src/hal/DZSTMark/: DZSTMark.cpp  DZSTMark.h  DZSTMarkDef.cpp  DZSTMarkDef.h
src/hal/megatron/: megatronDef.h
src/hal/megatron/printMegatron/: dzSTeGMCMegatron.cpp  dzSTeGMCMegatron.h
src/hal/plc/: modbusServer.cpp  modbusServer.h  plcSigDef.cpp  plcSigDef.h
src/hal/printDatas/: CMakeLists.txt  basicDef.h  printDatas.cpp  printDatas.h  printDatasDef.cpp  printDatasDef.h
src/hal/printDatas/scanPath/: CMakeLists.txt  basicDef.h  scanPath.cpp  scanPath.h  scanPathDef.cpp  scanPathDef.h
src/hal/printDatas/scanPath/blockFill/: CMakeLists.txt  blockFill.cpp  blockFill.h
src/hal/printDatas/scanPath/contourFill/: contourFill.h
src/hal/printDatas/scanPath/fillType/: CMakeLists.txt  iFillType.cpp  iFillType.h  iFillTypeDef.h
src/hal/printDatas/scanPath/fillType/modelFill/: CMakeLists.txt
src/hal/printDatas/scanPath/lineFill/: lineFill.cpp  lineFill.h
src/hal/vm/: CMakeLists.txt  ivm.h  manuDef.cpp  manuDef.h  ncDef.cpp  ncDef.h  vm.cpp  vm.h
src/hal/vm/action/: CMakeLists.txt  iAction.cpp  iAction.h  iActionState.h
src/hal/vm/action/autoWork/: CMakeLists.txt  autoWorkAction.cpp  autoWorkAction.h  autoWorkState.cpp  autoWorkState.h
src/hal/vm/action/autoWork/autoWorkOnce/: CMakeLists.txt  autoWorkOnceAction.cpp  (+3 more)
src/hal/vm/action/manu/: manuAction.cpp  manuAction.h  manuState.cpp  manuState.h
src/hal/vm/action/mark/: markState.cpp
src/hal/vm/action/markOnce/: CMakeLists.txt  markOnceAction.cpp  markOnceAction.h  markOnceState.cpp  markOnceState.h
src/hal/vm/action/spread/: spreadAction.h  spreadState.cpp  spreadState.h
src/para/: para.cpp  para.h
src/para/define/paraItem/: scanSystemParaItem.cpp  scanSystemParaItem.h
src/para/jsPara/: jsParaInit.cpp
src/system/: CMakeLists.txt  basic.h  systemService.cpp  systemService.h
src/system/logSystem/: CMakeLists.txt  debugLog.cpp  logDef.cpp
src/ui/: CMakeLists.txt  basic.cpp  basic.h  mainWindow.cpp  mainWindow.h  mainWindowDef.h
src/ui/control/: ledLab.cpp  ledLab.h
src/ui/control/btnSmart/: btnSmartState.cpp
src/ui/controlWindow/: controlWindow.cpp  controlWindow.h
src/ui/imageListPanel/: CMakeLists.txt  imageListPanel.cpp  imageListPanel.h
src/ui/imageListPanel/openGLWindow/: CMakeLists.txt  gLPathWidget.cpp  gLPathWidget.h  scanPathRenderer.cpp  scanPathRenderer.h
src/ui/manuPanel/: manuPanel.cpp  manuPanel.h
src/ui/menuBar/: menuBar.cpp  menuBar.h
src/ui/scanSystemWindow/: CMakeLists.txt  calibrateDialog.cpp  calibrateDialog.h
src/ui/scanSystemWindow/markGraph/: CMakeLists.txt  iMarkGraph.cpp  iMarkGraph.h  markGraphCreator.cpp  markGraphCreator.h  markGraphDef.h
src/ui/scanSystemWindow/markGraph/circle/: CMakeLists.txt  circle.cpp  circle.h
src/ui/scanSystemWindow/markGraph/grid/: CMakeLists.txt  grid.cpp  grid.h
src/ui/scanSystemWindow/markGraph/spiralFill/: CMakeLists.txt  spiralFill.cpp  spiralFill.h
src/ui/setParaWindow/: setParaWindow.cpp  setParaWindow.h
src/ui/setParaWindow/paraTree/: paraEditor.cpp  paraEditor.h  paraModel.cpp  paraModel.h  paraTreeDelegate.cpp  paraTreeDelegate.h  paraTreeDelegateDraw.h
(+11 files in other folders)
